<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name" translatable="false">Workout Routine</string>
    <string name="number_of_steps_for_today">Current number of steps:</string>
    <string name="select_time_for_reminder">Select time for reminder:</string>
    <string name="begginer">Beginner</string>
    <string name="your_workout_skill_level">Your workout skill level:</string>
    <string name="select_time">Select time</string>
    <string name="start_reminder">Start reminder</string>
    <string name="choose_another_level">Choose another level</string>
    <string name="start_counting">Start counting</string>
    <string name="powered_by_aleksa_novkovic">Powered by Aleksa Novkovic</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="workout_plan_for">Workout plan for:</string>
    <string name="monday">Monday</string>
    <string name="choose_another_day">Choose another day</string>
    <string name="go_back">Go Back</string>
    <string name="do_it">Do It</string>
    <string name="start_stopwatch">Start Stopwatch</string>
    <string name="give_up">Give Up</string>
    <string name="start">Start</string>
    <string name="show_workout_plan_for_day">Show workout plan for day:</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_successfully_finished_the_workout_and_earned_30_points">You successfully finished the workout and earned 30 points.</string>
    <string name="okay">Okay</string>
    <string name="hey">Hey!</string>
    <string name="are_you_sure_that_you_want_to_give_up_you_will_lose_10_points">Are you sure that you want to give up? You will lose 10 points.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="about_app">About App:</string>
    <string name="this_app_will_help_you_to_make_workout_routine_nyou_can_choose_the_starting_skill_level_that_will_generate_the_nubmer_of_repetitions_of_the_exercises_nyou_can_also_choose_time_for_your_daily_reminder_for_workout_n_nthis_app_allows_you_to_gain_points_and_ranks_every_successfully_finished_workout_gives_you_30_points_and_every_skipped_or_one_you_give_up_will_take_away_10_points_n_nfuthermore_this_app_will_offer_you_daily_inspirnig_quote_n_nand_finally_this_app_allows_you_to_use_stopwatch_during_your_workout_and_allows_playing_your_favorite_songs_on_youtube_or_on_your_music_player_n_n">"This app will help you to make workout routine.  You can choose the starting skill level. That will generate the number of repetitions of the exercises.  You can also choose time for your daily reminder for workout.   This app allows you to gain points and ranks. Every successfully finished workout gives you 30 points and every skipped or one you give up will take away 10 points.   Furthermore, this App will offer you a daily inspiring quote.   And finally, this app allows you to use stopwatch during your workout and allows playing your favorite songs on YouTube or on your Music Player.  "</string>
    <string name="choose_your_workout_skill_level">Choose your workout skill level:</string>
    <string name="it_is_recommended_to_start_with_the_level_beginner">***It is recommended to start with the level beginner***</string>
    <string name="medium">Medium</string>
    <string name="expert">Expert</string>
    <string name="more_options">More options:</string>
    <string name="get_quote_of_the_day">Get quote of the day</string>
    <string name="translate_the_app">Translate the app</string>
    <string name="info_about_app">Info about app</string>
    <string name="quote_for_today" translatable="false">Quote for today:</string>
    <string name="your_current_rank">Your current rank:</string>
    <string name="cadet">Cadet</string>
    <string name="points">Points:</string>
    <string name="stopcounting">Stop counting</string>
    <string name="restart_reminder">Restart reminder</string>
    <string name="legDay">Do it \n-Leg Day-</string>
    <string name="fullBody">Do It\n-Full Body-</string>
    <string name="triceps">Do It\n-Triceps-</string>
    <string name="abs">Do It\n-ABS-</string>
    <string name="upperBody">Do It\n-Upper Body-</string>
    <string name="back">Do It\n-Back-</string>
    <string name="alert">You already have done today\'s workout!\nWait until your Workout Alarm...</string>
    <string name="startTraining">You must start training first!</string>
    <string name="pauseStopwatch">Pause Stopwatch</string>
    <string name="resumeStopwatch">Resume Stopwatch</string>
    <string name="nextCycle">\"Next Cycle \n (cycle: \"</string>
    <string name="finishCycle">\"Finish \n (cycle: \"</string>
    <string name="of">\" of \"</string>
    <string name="musicPlayerAlert">You have not any music player instaled!</string>

</resources>
