<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:padding="5dp">

    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="@drawable/button_stroke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/show_workout_plan_for_day"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_1" />

    <TextView
        android:id="@+id/lblMonday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/monday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/lblTuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setMedium"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/tuesday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMonday" />

    <TextView
        android:id="@+id/lblWednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setExpert"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/wednesday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTuesday" />

    <TextView
        android:id="@+id/lblThursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setExpert"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/thursday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWednesday" />

    <TextView
        android:id="@+id/lblFriday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setExpert"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/friday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblThursday" />

    <TextView
        android:id="@+id/lblSaturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setExpert"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/saturday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFriday" />

    <TextView
        android:id="@+id/lblSunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="setExpert"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/sunday"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSaturday" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_stroke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSunday" />

</androidx.constraintlayout.widget.ConstraintLayout>