<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:padding="5dp">

    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="@drawable/button_stroke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/about_app"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_1" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInfoTitle">

        <TextView
            android:id="@+id/lblInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/this_app_will_help_you_to_make_workout_routine_nyou_can_choose_the_starting_skill_level_that_will_generate_the_nubmer_of_repetitions_of_the_exercises_nyou_can_also_choose_time_for_your_daily_reminder_for_workout_n_nthis_app_allows_you_to_gain_points_and_ranks_every_successfully_finished_workout_gives_you_30_points_and_every_skipped_or_one_you_give_up_will_take_away_10_points_n_nfuthermore_this_app_will_offer_you_daily_inspirnig_quote_n_nand_finally_this_app_allows_you_to_use_stopwatch_during_your_workout_and_allows_playing_your_favorite_songs_on_youtube_or_on_your_music_player_n_n"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:fontFamily="sans-serif-light" />

    </ScrollView>

    <Button
        android:id="@+id/btnCloseInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"

        android:background="@drawable/button_stroke"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/colorDirtyWhite"
        android:textSize="20sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_stroke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCloseInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>